--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ CMakeUserPresets.json
 /build
 /devel
 .catkin_workspace
+/.vscode
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
