--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ CMakeUserPresets.json
 /devel
 .catkin_workspace
 /.vscode
+/src/.idea
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
