--- a/src/px4ctrl/package.xml
+++ b/src/px4ctrl/package.xml
@@ -12,13 +12,13 @@
   <build_depend>rospy</build_depend>
   <build_depend>uav_utils</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>quadrotor_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>uav_utils</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>quadrotor_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>mavros</run_depend>
 
