--- a/src/ground_station_comm/package.xml
+++ b/src/ground_station_comm/package.xml
@@ -15,6 +15,7 @@
     <build_depend>std_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
     <build_depend>serial</build_depend>
+    <build_depend>message_generation</build_depend>
 
     <!-- Build export dependencies -->
     <build_export_depend>roscpp</build_export_depend>
@@ -27,6 +28,7 @@
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>serial</exec_depend>
+    <exec_depend>message_runtime</exec_depend>
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
