完成了px4位置控制

--- a/src/ground_station_comm/config/serial_config.yaml
+++ b/src/ground_station_comm/config/serial_config.yaml
@@ -9,3 +9,8 @@ position_threshold: 0.3  # meters
 
 # Debug settings
 debug_mode: false
+
+# Note:
+# - Flight height is fixed at 1.0 meters
+# - Position commands are published to /mavros/setpoint_position/local
+# - 45-degree diagonal landing to origin when reaching second-to-last waypoint
